base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  serviceName: home-assistant
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain

  volumeClaimTemplates:
    - metadata:
        name: home-assistant-config-root
      spec:
        accessModes:
          - ReadWriteMany
        resources:
          requests:
            storage: 2Gi

  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      containers:
      - name: home-assistant-app
        image: "ghcr.io/home-assistant/home-assistant:stable"
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8123
            protocol: TCP
        resources: {}
        livenessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8123
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
        volumeMounts:
          - name: home-assistant-config-root
            mountPath: /config
          - name: hass-certs
            mountPath: /ssl
      volumes:
        - name: hass-certs
          secret:
            secretName: hass-prod-cert
